fix: change sizing of feature text so that it does not become unreadable on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ nav ul {
     margin: 0;
     margin-right: 5em;
     padding-top: 30px;
+    font-size: 2vmin;
 }
 
 nav a {
@@ -82,7 +83,7 @@ footer {
 
 section.feature-text h2 {
     font-family: "Kanit", serif;
-    font-size: 70px;
+    font-size: 6.5vmin;
     font-weight: 600;
 }
 
@@ -90,13 +91,13 @@ section.feature-text {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
-    margin-left: 5em;
-    margin-right: 7em;
-    margin-top: 5em;
-    margin-bottom: 5em;
-    padding-bottom: 5em;
-    padding-left: 5em;
-    padding-top: 2em;
+    margin-left: 5vw;
+    margin-right: 7vw;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+    padding-bottom: 5vw;
+    padding-left: 5vw;
+    padding-top: 2vw;
     background-color: rgb(255, 170, 170); 
     
 }
@@ -114,6 +115,7 @@ div.line2 {
 
 .profilepic figure {
     box-shadow: 5px 5px black;
+    margin-top: 3vmax;
 }
 
 .indextable {
